# workganizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1782626394060-bb660cf698f0e.mjs
.github/workflows/: release.yml
docs/: index.html  style.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIModal.tsx  CreateModal.tsx  EditModal.tsx  ImportModal.tsx  ProjectCard.tsx  SettingsModal.tsx
src/db/: database.ts
src/lib/: aiConfig.ts  ollama.ts
