[package]
name = "workganizer"
version = "0.1.1"
description = "Workganizer - Project Idea Manager"
authors = ["spcmute"]
edition = "2021"

[package.metadata.bundle]
identifier = "com.spcmute.workganizer"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/icon.ico"]

[lib]
name = "workganizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
